--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lezir",
+  "name": "oklg",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bignumber.js": "^9.0.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.1",
     "core-js": "^3.6.4",
@@ -17,7 +18,9 @@
     "vue-router": "^3.1.6",
     "vue-scrollto": "^2.18.1",
     "vue-youtube": "^1.4.0",
-    "vue2-scrollspy": "^2.3.1"
+    "vue2-scrollspy": "^2.3.1",
+    "vuex": "^3.6.2",
+    "web3": "^1.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
