--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.1",
     "core-js": "^3.6.4",
+    "dayjs": "^1.10.7",
     "highlightjs": "^9.16.2",
     "highlightjs-solidity": "^2.0.2",
     "vue": "^2.6.11",
