--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.6.6",
     "bignumber.js": "^9.0.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.1",
@@ -21,7 +22,8 @@
     "vue-youtube": "^1.4.0",
     "vue2-scrollspy": "^2.3.1",
     "vuex": "^3.6.2",
-    "web3": "^1.6.0"
+    "web3": "^1.6.0",
+    "web3modal": "^1.9.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
