--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-feather-icons": "^5.0.0",
     "vue-router": "^3.1.6",
     "vue-scrollto": "^2.18.1",
+    "vue-toastification": "^1.7.14",
     "vue-youtube": "^1.4.0",
     "vue2-scrollspy": "^2.3.1",
     "vuex": "^3.6.2",
